# grantmatch-api

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  LICENSE  PROGRESS.md  README.md  pyproject.toml  railway.json  requirements.txt  vercel.json
app/: config.py  database.py  main.py
app/api/: routes.py
app/models/: db_models.py  schemas.py
app/services/: embedder.py  matcher.py  reranker.py
app/utils/: eligibility.py  feature_extractor.py
data/: test_verify.db
data/ingest/: __init__.py  ingest_cordis.py  ingest_govuk_grants.py  ingest_ukri_gtr.py  ingest_ukri_opportunities.py
ml/: evaluate.py  model.pkl  train.py
scripts/: build_index.py  ingest_all.py
tests/: test_api.py  test_matcher.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/match/: route.ts
web/app/demo/: page.tsx
web/app/docs/: page.tsx
web/app/pricing/: page.tsx
web/components/demo/: GrantCard.tsx  SearchForm.tsx
web/components/layout/: Footer.tsx  Navbar.tsx
web/components/shared/: AnimatedBackground.tsx  GlassPanel.tsx  ScoreRing.tsx
web/lib/: api.ts  constants.ts  types.ts
